--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
         <nav class="nav-container">
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link" data-en="Home" data-zh="首页">Home</a></li>
-                <li><a href="#about" class="nav-link" data-en="About" data-zh="关于">About</a></li>
-                <li><a href="#research" class="nav-link" data-en="Research" data-zh="研究">Research</a></li>
                 <li><a href="#projects" class="nav-link" data-en="Projects" data-zh="项目">Projects</a></li>
-                <li><a href="#resume" class="nav-link" data-en="Resume" data-zh="简历">Resume</a></li>
+                <li><a href="#" class="nav-link resume-link" data-en="Resume" data-zh="简历" data-link-en="https://drive.google.com/file/d/18C-Eg-KuukjUHY14Dcmv7YlW2O-vJJY0/view?usp=sharing" data-link-zh="https://drive.google.com/file/d/1FHu3jJ_YPunnVjPce5deXzv3Ik3luZOU/view?usp=sharing">Resume</a></li>
                 <li><a href="#contact" class="nav-link" data-en="Contact" data-zh="联系">Contact</a></li>
             </ul>
             <div class="nav-controls">
@@ -63,42 +61,33 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+                <div class="about-content">
+                    <div class="about-text">
+                        <p data-en="I am a Master of Science in Technology Innovation – Robotics student at the <a href='https://www.washington.edu/' target='_blank' rel='noopener'>University of Washington</a> and a researcher in the <a href='https://robotlearning.cs.washington.edu/' target='_blank' rel='noopener'>Robot Learning Lab@UW</a>. My work focuses on combining Reinforcement Learning with Model Predictive Control (MPC) and Online Learning." data-zh="我目前就读于<a href='https://www.washington.edu/' target='_blank' rel='noopener'>华盛顿大学</a>科技创新硕士（机器人方向），同时在华盛顿大学<a href='https://robotlearning.cs.washington.edu/' target='_blank' rel='noopener'>Robot Learning Lab</a> 从事研究工作。我的研究方向主要聚焦于强化学习与模型预测控制（MPC）的结合，以及在线学习在机器人中的应用。">I am a Master of Science in Technology Innovation – Robotics student at the <a href="https://www.washington.edu/" target="_blank" rel="noopener">University of Washington</a> and a researcher in the <a href="https://robotlearning.cs.washington.edu/" target="_blank" rel="noopener">Robot Learning Lab@UW</a>. My work focuses on combining Reinforcement Learning with Model Predictive Control (MPC) and Online Learning.</p>
 
-        <section id="about" class="about">
-            <div class="container">
-                <div class="section-header">
-                    <h2 data-en="About Me" data-zh="关于我">About Me</h2>
-                    <div class="section-line"></div>
-                </div>
-                <div class="about-text">
-                    <p data-en="I am a Master of Science in Technology Innovation – Robotics student at the <a href='https://www.washington.edu/' target='_blank' rel='noopener'>University of Washington</a> and a researcher in the <a href='https://robotlearning.cs.washington.edu/' target='_blank' rel='noopener'>Robot Learning Lab@UW</a>. My work focuses on combining Reinforcement Learning with Model Predictive Control (MPC) and Online Learning." data-zh="我目前就读于<a href='https://www.washington.edu/' target='_blank' rel='noopener'>华盛顿大学</a>科技创新硕士（机器人方向），同时在华盛顿大学<a href='https://robotlearning.cs.washington.edu/' target='_blank' rel='noopener'>Robot Learning Lab</a> 从事研究工作。我的研究方向主要聚焦于强化学习与模型预测控制（MPC）的结合，以及在线学习在机器人中的应用。">I am a Master of Science in Technology Innovation – Robotics student at the <a href="https://www.washington.edu/" target="_blank" rel="noopener">University of Washington</a> and a researcher in the <a href="https://robotlearning.cs.washington.edu/" target="_blank" rel="noopener">Robot Learning Lab@UW</a>. My work focuses on combining Reinforcement Learning with Model Predictive Control (MPC) and Online Learning.</p>
+                        <p data-en="Before joining UW, I received my Bachelor's degree with High Honors from the College of Computer Science and Technology at <a href='https://www.zju.edu.cn/english/' target='_blank' rel='noopener'>Zhejiang University</a>, along with a minor in Business Administration." data-zh="在加入华盛顿大学之前，我以优异的成绩毕业于<a href='https://www.zju.edu.cn/english/' target='_blank' rel='noopener'>浙江大学</a>计算机科学与技术学院，获得工学学士学位，辅修工商管理。">Before joining UW, I received my Bachelor's degree with High Honors from the College of Computer Science and Technology at <a href="https://www.zju.edu.cn/english/" target="_blank" rel="noopener">Zhejiang University</a>, along with a minor in Business Administration.</p>
 
-                    <p data-en="Before joining UW, I received my Bachelor's degree with High Honors from the College of Computer Science and Technology at <a href='https://www.zju.edu.cn/english/' target='_blank' rel='noopener'>Zhejiang University</a>, along with a minor in Business Administration." data-zh="在加入华盛顿大学之前，我以优异的成绩毕业于<a href='https://www.zju.edu.cn/english/' target='_blank' rel='noopener'>浙江大学</a>计算机科学与技术学院，获得工学学士学位，辅修工商管理。">Before joining UW, I received my Bachelor's degree with High Honors from the College of Computer Science and Technology at <a href="https://www.zju.edu.cn/english/" target="_blank" rel="noopener">Zhejiang University</a>, along with a minor in Business Administration.</p>
-
-                    <div class="about-interests">
-                        <h3 data-en="Research Interests" data-zh="研究兴趣">Research Interests</h3>
-                        <div class="interests-grid">
-                            <span class="interest-tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
-                            <span class="interest-tag" data-en="Robot Learning" data-zh="机器人学习">Robot Learning</span>
-                            <span class="interest-tag" data-en="Online Learning" data-zh="在线学习">Online Learning</span>
+                        <div class="about-interests">
+                            <h3 data-en="Research Interests" data-zh="研究兴趣">Research Interests</h3>
+                            <div class="interests-grid">
+                                <span class="interest-tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
+                                <span class="interest-tag" data-en="Robot Learning" data-zh="机器人学习">Robot Learning</span>
+                                <span class="interest-tag" data-en="Online Learning" data-zh="在线学习">Online Learning</span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="research" class="research">
+        <section id="projects" class="research">
             <div class="container">
                 <div class="section-header">
-                    <h2 data-en="Research" data-zh="研究">Research</h2>
+                    <h2 data-en="Projects" data-zh="项目经历">Projects</h2>
                     <div class="section-line"></div>
                 </div>
                 <div class="research-content">
                     <div class="research-item">
-                        <div class="research-image">
-                        </div>
                         <div class="research-info">
                             <div class="research-tags">
                                 <span class="tag" data-en="Adversarial Imitation Learning" data-zh="对抗模仿学习">Adversarial Imitation Learning</span>
@@ -106,36 +95,31 @@
                                 <span class="tag" data-en="Model Predictive Control" data-zh="模型预测控制">Model Predictive Control</span>
                                 <span class="tag" data-en="Online Learning" data-zh="在线学习">Online Learning</span>
                             </div>
-                            <h3 data-en="Online Training with Model Predictive Adversarial Imitation Learning" data-zh="基于模型预测对抗模仿学习的在线训练">Online Training with Model Predictive Adversarial Imitation Learning</h3>
-                            <p class="research-venue" data-en="Summer Research at Robot Learning Lab @ UW" data-zh="Robot Learning Lab @ UW 暑期研究">Summer Research at <a href="https://robotlearning.cs.washington.edu/" target="_blank" rel="noopener">Robot Learning Lab @ UW</a></p>
-                            <div class="research-status">
-                                <span class="status-badge" data-en="Paper in progress" data-zh="论文撰写中">Paper in progress</span>
-                            </div>
+                            <h3 data-en="Real-World Model Predictive Adversarial Imitation Learning" data-zh="真实世界中的模型预测对抗模仿学习">Online Training with Model Predictive Adversarial Imitation Learning</h3>
+                            <p class="research-venue" data-en="Summer Research Project at Robot Learning Lab @ UW" data-zh="Robot Learning Lab @ UW 暑期研究项目">Summer Research at <a href="https://robotlearning.cs.washington.edu/" target="_blank" rel="noopener">Robot Learning Lab @ UW</a></p>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
 
-        <section id="projects" class="projects">
-            <div class="container">
-                <div class="section-header">
-                    <h2 data-en="Course Projects" data-zh="项目">Course Projects</h2>
-                    <div class="section-line"></div>
-                </div>
-                <div class="projects-grid">
-                    <div class="project-card">
-                        <div class="project-image">
-                            <div class="project-placeholder"></div>
-                        </div>
-                        <div class="project-content">
-                            <h3 data-en="Advanced Machine Learning Project" data-zh="高级机器学习项目">Advanced Machine Learning Project</h3>
-                            <p data-en="Implementation of novel algorithms for robotic control and learning systems." data-zh="为机器人控制和学习系统实现新颖算法。">Implementation of novel algorithms for robotic control and learning systems.</p>
-                            <div class="project-tech">
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">PyTorch</span>
-                                <span class="tech-tag">ROS</span>
+                    <div class="research-item">
+                        <div class="research-info">
+                            <div class="research-tags">
+                                <span class="tag" data-en="Imitation Learning" data-zh="模仿学习">Imitation Learning</span>
+                                <span class="tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
+                                <span class="tag" data-en="Algorithm Improvement" data-zh="算法改进">Algorithm Improvement</span>
                             </div>
+                            <h3 data-en="Algorithmic Enhancements for Stable and Sample-Efficient Real-World Model Predictive Adversarial Imitation Learning" data-zh="基于算法优化的模型预测对抗式模仿学习稳定性与效率提升研究">Algorithmic Enhancements for Stable and Sample-Efficient Real-World Model Predictive Adversarial Imitation Learning</h3>
+                            <p class="research-venue" data-en="Research at Robot Learning Lab" data-zh="Robot Learning Lab 研究">Research at Robot Learning Lab</p>
+                        </div>
+                    </div>
+
+                    <div class="research-item">
+                        <div class="research-info">
+                            <div class="research-tags">
+                                <span class="tag" data-en="ROS2" data-zh="ROS2">ROS2</span>
+                                <span class="tag" data-en="DDS" data-zh="DDS">DDS</span>
+                            </div>
+                            <h3 data-en="GIX Community Farm - Integrated Robotic Task Execution System" data-zh="GIX 社区农场 - 集成机器人任务执行系统">GIX Community Farm - Integrated Robotic Task Execution System</h3>
+                            <p class="research-venue" data-en="Project For Course TECHIN517" data-zh="TECHIN517 课程项目">Project for course TECHIN517</p>
                         </div>
                     </div>
                 </div>
@@ -154,6 +138,7 @@
                         <div class="education-content">
                             <h3 data-en="University of Washington" data-zh="华盛顿大学">University of Washington</h3>
                             <p class="education-degree" data-en="MS in Technology Innovation - Robotics" data-zh="机器人硕士">MS in Technology Innovation - Robotics</p>
+                            <p class="education-degree" data-en="Robot Learning Lab @UW" data-zh="Robot Learning Lab @UW">Robot Learning Lab @UW</p>
                         </div>
                     </div>
                     <div class="education-item">
