--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <div class="interests-grid">
                                 <span class="interest-tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
                                 <span class="interest-tag" data-en="Robot Learning" data-zh="机器人学习">Robot Learning</span>
-                                <span class="interest-tag" data-en="Online Learning" data-zh="在线学习">Online Learning</span>
+                                <span class="interest-tag" data-en="Real-World Learning" data-zh="在线学习">Online Learning</span>
                             </div>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                     <div class="section-line"></div>
                 </div>
                 <div class="research-content">
-                    <div class="research-item">
+                    <a href="https://kumamonlove.github.io/Real-World-MPAIL/" target="_blank" rel="noopener" class="research-item">
                         <div class="research-info">
                             <div class="research-tags">
                                 <span class="tag" data-en="Adversarial Imitation Learning" data-zh="对抗模仿学习">Adversarial Imitation Learning</span>
@@ -96,11 +96,11 @@
                                 <span class="tag" data-en="Online Learning" data-zh="在线学习">Online Learning</span>
                             </div>
                             <h3 data-en="Real-World Model Predictive Adversarial Imitation Learning" data-zh="真实世界中的模型预测对抗模仿学习">Online Training with Model Predictive Adversarial Imitation Learning</h3>
-                            <p class="research-venue" data-en="Summer Research Project at Robot Learning Lab @ UW" data-zh="Robot Learning Lab @ UW 暑期研究项目">Summer Research at <a href="https://robotlearning.cs.washington.edu/" target="_blank" rel="noopener">Robot Learning Lab @ UW</a></p>
+                            <p class="research-venue" data-en="Summer Research Project at Robot Learning Lab @ UW" data-zh="Robot Learning Lab @ UW 暑期研究项目">Summer Research at Robot Learning Lab @ UW</p>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="research-item">
+                    <a href="https://github.com/UWRobotLearning/WheeledLab-research" target="_blank" rel="noopener" class="research-item">
                         <div class="research-info">
                             <div class="research-tags">
                                 <span class="tag" data-en="Imitation Learning" data-zh="模仿学习">Imitation Learning</span>
@@ -109,19 +109,21 @@
                             </div>
                             <h3 data-en="Algorithmic Enhancements for Stable and Sample-Efficient Real-World Model Predictive Adversarial Imitation Learning" data-zh="基于算法优化的模型预测对抗式模仿学习稳定性与效率提升研究">Algorithmic Enhancements for Stable and Sample-Efficient Real-World Model Predictive Adversarial Imitation Learning</h3>
                             <p class="research-venue" data-en="Research at Robot Learning Lab" data-zh="Robot Learning Lab 研究">Research at Robot Learning Lab</p>
+                            <p class="research-note" data-en="(The source code has not been made public yet)" data-zh="(源代码暂未公开)">(The source code has not been made public yet)</p>
                         </div>
-                    </div>
+                    </a>
 
-                    <div class="research-item">
+                    <a href="https://drive.google.com/file/d/1WjOLkm7fvjSG_7Px5Byn78gCID0NB2YJ/view?usp=sharing" target="_blank" rel="noopener" class="research-item">
                         <div class="research-info">
                             <div class="research-tags">
                                 <span class="tag" data-en="ROS2" data-zh="ROS2">ROS2</span>
                                 <span class="tag" data-en="DDS" data-zh="DDS">DDS</span>
+                                <span class="tag" data-en="MoveIt" data-zh="MoveIt">Moveit</span>
                             </div>
                             <h3 data-en="GIX Community Farm - Integrated Robotic Task Execution System" data-zh="GIX 社区农场 - 集成机器人任务执行系统">GIX Community Farm - Integrated Robotic Task Execution System</h3>
                             <p class="research-venue" data-en="Project For Course TECHIN517" data-zh="TECHIN517 课程项目">Project for course TECHIN517</p>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
