--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <span class="tag" data-en="Adversarial Imitation Learning" data-zh="对抗模仿学习">Adversarial Imitation Learning</span>
                                 <span class="tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
                                 <span class="tag" data-en="Model Predictive Control" data-zh="模型预测控制">Model Predictive Control</span>
-                                <span class="tag" data-en="Online Learning" data-zh="在线学习">Online Learning</span>
+                                <span class="tag" data-en="Real-World Learning" data-zh="在线学习">Online Learning</span>
                             </div>
                             <h3 data-en="Real-World Model Predictive Adversarial Imitation Learning" data-zh="真实世界中的模型预测对抗模仿学习">Online Training with Model Predictive Adversarial Imitation Learning</h3>
                             <p class="research-venue" data-en="Summer Research Project at Robot Learning Lab @ UW" data-zh="Robot Learning Lab @ UW 暑期研究项目">Summer Research at Robot Learning Lab @ UW</p>
