--- a/index.html
+++ b/index.html
@@ -63,16 +63,18 @@
                 </div>
                 <div class="about-content">
                     <div class="about-text">
-                        <p data-en="I am a Master of Science in Technology Innovation – Robotics student at the <a href='https://www.washington.edu/' target='_blank' rel='noopener'>University of Washington</a> and a researcher in the <a href='https://robotlearning.cs.washington.edu/' target='_blank' rel='noopener'>Robot Learning Lab@UW</a>. My work focuses on combining Reinforcement Learning with Model Predictive Control (MPC) and Online Learning." data-zh="我目前就读于<a href='https://www.washington.edu/' target='_blank' rel='noopener'>华盛顿大学</a>科技创新硕士（机器人方向），同时在华盛顿大学<a href='https://robotlearning.cs.washington.edu/' target='_blank' rel='noopener'>Robot Learning Lab</a> 从事研究工作。我的研究方向主要聚焦于强化学习与模型预测控制（MPC）的结合，以及在线学习在机器人中的应用。">I am a Master of Science in Technology Innovation – Robotics student at the <a href="https://www.washington.edu/" target="_blank" rel="noopener">University of Washington</a> and a researcher in the <a href="https://robotlearning.cs.washington.edu/" target="_blank" rel="noopener">Robot Learning Lab@UW</a>. My work focuses on combining Reinforcement Learning with Model Predictive Control (MPC) and Online Learning.</p>
+                        <p data-en="I am a Master of Science in Technology Innovation – Robotics student at the <a href='https://www.washington.edu/' target='_blank' rel='noopener'>University of Washington</a> and a researcher in the <a href='https://robotlearning.cs.washington.edu/' target='_blank' rel='noopener'>Robot Learning Lab@UW</a>. My work focuses on combining Reinforcement Learning, Imiation Learning with Model Predictive Control, as well as Real-World Learning." data-zh="我目前就读于<a href='https://www.washington.edu/' target='_blank' rel='noopener'>华盛顿大学</a>科技创新硕士（机器人方向），同时在华盛顿大学<a href='https://robotlearning.cs.washington.edu/' target='_blank' rel='noopener'>Robot Learning Lab</a> 从事研究工作。我的研究方向主要聚焦于强化学习、模仿学习和模型预测控制的结合，以及真机学习。">I am a Master of Science in Technology Innovation – Robotics student at the <a href="https://www.washington.edu/" target="_blank" rel="noopener">University of Washington</a> and a researcher in the <a href="https://robotlearning.cs.washington.edu/" target="_blank" rel="noopener">Robot Learning Lab@UW</a>. My work focuses on combining Reinforcement Learning with Model Predictive Control (MPC) and Online Learning.</p>
 
                         <p data-en="Before joining UW, I received my Bachelor's degree with High Honors from the College of Computer Science and Technology at <a href='https://www.zju.edu.cn/english/' target='_blank' rel='noopener'>Zhejiang University</a>, along with a minor in Business Administration." data-zh="在加入华盛顿大学之前，我以优异的成绩毕业于<a href='https://www.zju.edu.cn/english/' target='_blank' rel='noopener'>浙江大学</a>计算机科学与技术学院，获得工学学士学位，辅修工商管理。">Before joining UW, I received my Bachelor's degree with High Honors from the College of Computer Science and Technology at <a href="https://www.zju.edu.cn/english/" target="_blank" rel="noopener">Zhejiang University</a>, along with a minor in Business Administration.</p>
 
                         <div class="about-interests">
                             <h3 data-en="Research Interests" data-zh="研究兴趣">Research Interests</h3>
                             <div class="interests-grid">
-                                <span class="interest-tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
-                                <span class="interest-tag" data-en="Robot Learning" data-zh="机器人学习">Robot Learning</span>
-                                <span class="interest-tag" data-en="Real-World Learning" data-zh="在线学习">Online Learning</span>
+                                <span class="tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
+                                <span class="tag" data-en="Imitation Learning" data-zh="模仿学习">Reinforcement Learning</span>
+                                <span class="tag" data-en="Model Predictive Control" data-zh="模型预测控制">Model Predictive Control</span>
+                                <span class="tag" data-en="Adversarial Imitation Learning" data-zh="对抗模仿学习">Adversarial Imitation Learning</span>                  
+                                <span class="tag" data-en="Real-World Learning" data-zh="真机学习">Real-World Learning</span>
                             </div>
                         </div>
                     </div>
@@ -92,10 +94,11 @@
                             <div class="research-tags">
                                 <span class="tag" data-en="Adversarial Imitation Learning" data-zh="对抗模仿学习">Adversarial Imitation Learning</span>
                                 <span class="tag" data-en="Reinforcement Learning" data-zh="强化学习">Reinforcement Learning</span>
+                                <span class="tag" data-en="Reinforcement Learning" data-zh="模仿学习">Reinforcement Learning</span>
                                 <span class="tag" data-en="Model Predictive Control" data-zh="模型预测控制">Model Predictive Control</span>
-                                <span class="tag" data-en="Real-World Learning" data-zh="在线学习">Online Learning</span>
+                                <span class="tag" data-en="Real-World Learning" data-zh="真机学习">Real-World Learning</span>
                             </div>
-                            <h3 data-en="Real-World Model Predictive Adversarial Imitation Learning" data-zh="真实世界中的模型预测对抗模仿学习">Online Training with Model Predictive Adversarial Imitation Learning</h3>
+                            <h3 data-en="Real-World Model Predictive Adversarial Imitation Learning" data-zh="真机模型预测对抗模仿学习">Online Training with Model Predictive Adversarial Imitation Learning</h3>
                             <p class="research-venue" data-en="Summer Research Project at Robot Learning Lab @ UW" data-zh="Robot Learning Lab @ UW 暑期研究项目">Summer Research at Robot Learning Lab @ UW</p>
                         </div>
                     </a>
