--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="section-line"></div>
                 </div>
                 <div class="research-content">
-                    <a href="https://kumamonlove.github.io/Real-World-MPAIL/" target="_blank" rel="noopener" class="research-item">
+                    <a href="https://uwrobotlearning.github.io/mpail2/" target="_blank" rel="noopener" class="research-item">
                         <div class="research-info">
                             <div class="research-tags">
                                 <span class="tag" data-en="Adversarial Imitation Learning" data-zh="对抗模仿学习">Adversarial Imitation Learning</span>
